<resources>
    <string name="app_name">Telegram Profile</string>
    <string name="account">Account</string>
    <string name="Your_phone_number">+20 01234567891</string>
    <string name="tap_to_change_phone_number">Tap to change phone number</string>
    <string name="your_email">TheChance_123</string>
    <string name="username">Username</string>
    <string name="your_bio_text">Android Developer</string>
    <string name="bio">Bio</string>
    <string name="settings">Settings</string>
    <string name="notifications_and_sounds">Notifications and Sounds</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="chat_folders">Chat Folders</string>
    <string name="the_chance">The Chance</string>
    <string name="online">online</string>
</resources>